# url_shrotner

./: .env  Cargo.toml  readme.md
migrations/2024-05-23-070826_create_urls/: down.sql  up.sql
migrations/2024-05-23-190343_create_user/: up.sql
migrations/2024-05-24-053651_user_url_mapping/: down.sql  up.sql
src/: auth_guard.rs  main.rs  models.rs  routes.rs  schema.rs  utilities.rs
src/models/: urls.rs  user_url_mappings.rs  users.rs
src/repositories/: urls.rs  user_url_mappings.rs  users.rs
src/routes/: urls.rs  users.rs
