[package]
name = "url_shortner"
version = "0.1.0"
edition = "2021"
authors = ["devesrawat@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
argon2 = "0.5.3"
chrono = {version = "0.4.38", features = ["serde"]}
diesel = { version = "2.1.0", features = ["postgres","chrono","r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.21"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = {version="1.0.202", features=["derive"]}
serde_json = "1.0.117"
sha2 = "0.10.8"
